fix text-align in course show page

--- a/app/assets/stylesheets/dome.scss
+++ b/app/assets/stylesheets/dome.scss
@@ -285,7 +285,6 @@ hr.dome-courses:after {
 }
 
 .course-info {
-    text-align: center;
     margin: 20px auto;
     width: 70%;
 }
